部分翻译为英文

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -1,104 +1,101 @@
 {
   "__1": "_____________________________________通用____________________________________________",
-  "yes": "是",
-  "no": "否",
-  "close": "关闭",
-  "netError": "网络开小差了哦~",
-  "refresh": "刷新",
-  "addFav": "收藏",
-  "share": "分享",
-  "openByOtherWay": "其他方式打开",
-  "copyUrl": "复制URL",
-  "alreadyCopyUrl": "已复制链接",
+  "close": "Close",
+  "netError": "Network went to aliens~",
+  "refresh": "Refresh",
+  "share": "Share",
+  "openByOtherWay": "Open By Browser",
+  "copyUrl": "Copy Url",
+  "alreadyCopyUrl": "Url copied",
   "retry": "重试",
   "loadFail": "加载失败！",
-  "cancel": "取消",
-  "certain": "确定",
-  "unknown": "未知",
-  "wait": "稍后",
-  "install": "安装",
-  "download": "下载",
+  "cancel": "Cancel",
+  "certain": "Confirm",
+  "unknown": "Unknown",
+  "wait": "Later",
+  "install": "Install",
+  "download": "Download",
   "appName": "假装看天气(Flutter)",
   "__2": "_____________________________________主页_____________________________________",
-  "weather": "天气",
-  "gift": "福利",
-  "read": "闲读",
-  "collect": "收藏",
-  "setting": "设置",
-  "about": "关于",
-  "retryToExit": "再按一次退出App！",
+  "weather": "Weather",
+  "gift": "Gift",
+  "read": "News",
+  "collect": "Favorite",
+  "setting": "Setting",
+  "about": "About",
+  "retryToExit": "Back again to exit app!",
   "__3": "_____________________________________天气_____________________________________",
-  "locationError": "定位失败，请给与定位权限",
-  "cityControl": "城市管理",
-  "cityChoose": "城市选择",
-  "repeatCity": "重复的城市！",
-  "dataSource": "数据来源：和风天气",
-  "monday": "星期一",
-  "tuesday": "星期二",
-  "wednesday": "星期三",
-  "thursday": "星期四",
-  "friday": "星期五",
-  "saturday": "星期六",
-  "sunday": "星期日",
-  "today": "今天",
-  "air": "空气",
-  "cw": "洗车",
-  "uv": "紫外线",
-  "trav": "旅游",
-  "sport": "运动",
-  "drsg": "穿衣",
-  "comf": "舒适度",
-  "flu": "感冒",
+  "locationError": "Positioning failed, please give permission",
+  "cityControl": "City Manage",
+  "cityChoose": "City Select",
+  "repeatCity": "City selection repeat",
+  "dataSource": "Data source: HeWeather",
+  "monday": "Monday",
+  "tuesday": "Tuesday",
+  "wednesday": "Wednesday",
+  "thursday": "Thursday",
+  "friday": "Friday",
+  "saturday": "Saturday",
+  "sunday": "Sunday",
+  "today": "Today",
+  "air": "Air",
+  "cw": "Car Wash",
+  "uv": "UV",
+  "trav": "Travel",
+  "sport": "Sport",
+  "drsg": "Dress",
+  "comf": "Comfortable",
+  "flu": "Flu",
   "pm25": "细颗粒物",
   "so2": "二氧化硫",
   "co": "一氧化碳",
   "pm10": "可吸入颗粒物",
   "no2": "二氧化氮",
   "o3": "臭氧",
-  "hum": "湿度",
-  "pres": "气压",
+  "hum": "Humidity",
+  "pres": "Pressure",
   "windSc": "级",
-  "weatherFail": "天气信息获取失败！",
-  "weathersView": "动态天气预览",
-  "sunny": "晴",
-  "cloudy": "多云",
-  "overcast": "阴",
-  "rain": "雨",
-  "flashRain": "雷雨",
-  "snowRain": "雨夹雪",
-  "snow": "雪",
-  "hail": "冰雹",
-  "fog": "雾",
-  "smog": "雾霾",
-  "sandstorm": "沙尘暴",
+  "weatherFail": "Weather load failed!",
+  "weathersView": "Weathers Preview",
+  "sunny": "Sunny",
+  "cloudy": "Cloudy",
+  "overcast": "Overcast",
+  "rain": "Rain",
+  "flashRain": "Thunderstorm",
+  "snowRain": "Sleet",
+  "snow": "Snow",
+  "hail": "Hail",
+  "fog": "Fog",
+  "smog": "Smog",
+  "sandstorm": "Sandstorm",
   "__4": "_____________________________________福利_____________________________________",
   "gank": "Gank",
-  "egg": "煎蛋",
-  "mostHot": "最热",
-  "sexGirl": "性感妹子",
-  "japanGirl": "日本妹子",
-  "taiwanGirl": "台湾妹子",
-  "beachGirl": "清纯妹子",
-  "selfGirl": "妹子自拍",
-  "allGirl": "每日更新",
-  "landGirl": "街拍美女",
-  "imageSet": "图集",
-  "gankFail": "Gank获取失败！",
-  "eggFail": "煎蛋获取失败！",
-  "mostHotFail": "最热获取失败！",
-  "sexGirlFail": "性感妹子获取失败！",
-  "japanGirlFail": "日本妹子获取失败！",
-  "taiwanGirFail": "台湾妹子获取失败！",
-  "beachGirlFail": "清纯妹子获取失败！",
-  "selfGirlFail": "妹子自拍获取失败！",
-  "allGirlFail": "每日更新获取失败！",
-  "landGirlFail": "街拍美女获取失败！",
-  "imageSetFail": "组图加载是失败！",
-  "imgSave": "保存图片",
-  "imgSaveSuccess": "图片保存成功！",
-  "imgSaveFail": "图片保存失败！",
-  "setAsWallpaper": "设为壁纸",
-  "canNotSetWallpaper": "无法设置壁纸，请检查网络！",
+  "egg": "Egg",
+  "mostHot": "Hot",
+  "sexGirl": "Sexy",
+  "japanGirl": "Japanese",
+  "taiwanGirl": "Taiwan",
+  "beachGirl": "Beach",
+  "selfGirl": "Selfie",
+  "allGirl": "Update",
+  "landGirl": "Street",
+  "imageSet": "Image Set",
+  "gankFail": "Gank images get failed!",
+  "eggFail": "Egg images get failed!",
+  "mostHotFail": "Hot images get failed!",
+  "sexGirlFail": "Sexy images get failed!！",
+  "japanGirlFail": "Japanese images get failed!",
+  "taiwanGirFail": "Taiwan images get failed!",
+  "beachGirlFail": "Beach images get failed!",
+  "selfGirlFail": "Selfie images get failed!",
+  "allGirlFail": "Update images get failed!",
+  "landGirlFail": "Street images get failed!",
+  "imageSetFail": "Image set get failed!",
+  "imgSave": "Save",
+  "imgSaveSuccess": "Image save succeed",
+  "imgSaveFail": "Image save failed!",
+  "setAsWallpaper": "Wallpaper",
+  "canNotSetWallpaper": "Can't set wallpaper, please check network!",
   "__5": "_____________________________________闲读_____________________________________",
   "xiandu": "科技资讯",
   "xianduApps": "趣味软件/游戏",
