国外城市定位报错修改为默认值

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -7,8 +7,8 @@
   "openByOtherWay": "Open By Browser",
   "copyUrl": "Copy Url",
   "alreadyCopyUrl": "Url copied",
-  "retry": "重试",
-  "loadFail": "加载失败！",
+  "retry": "Retry",
+  "loadFail": "Load failed!",
   "cancel": "Cancel",
   "certain": "Confirm",
   "unknown": "Unknown",
@@ -54,7 +54,7 @@
   "o3": "臭氧",
   "hum": "Humidity",
   "pres": "Pressure",
-  "windSc": "级",
+  "windScValue": "Level $value",
   "weatherFail": "Weather load failed!",
   "weathersView": "Weathers Preview",
   "sunny": "Sunny",
@@ -97,10 +97,10 @@
   "setAsWallpaper": "Wallpaper",
   "canNotSetWallpaper": "Can't set wallpaper, please check network!",
   "__5": "_____________________________________闲读_____________________________________",
-  "xiandu": "科技资讯",
-  "xianduApps": "趣味软件/游戏",
-  "xianduImrich": "装备党",
-  "xianduFunny": "草根新闻",
+  "xiandu": "Technology",
+  "xianduApps": "Apps",
+  "xianduImrich": "Imrich",
+  "xianduFunny": "Funny",
   "xianduAndroid": "Android",
   "xianduDie": "创业新闻",
   "xianduThink": "独立思想",
