闲读采用新api

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -80,41 +80,25 @@
   "allGirl": "Update",
   "landGirl": "Street",
   "imageSet": "Image Set",
-  "gankFail": "Gank images get failed!",
-  "eggFail": "Egg images get failed!",
-  "mostHotFail": "Hot images get failed!",
-  "sexGirlFail": "Sexy images get failed!！",
-  "japanGirlFail": "Japanese images get failed!",
-  "taiwanGirFail": "Taiwan images get failed!",
-  "beachGirlFail": "Beach images get failed!",
-  "selfGirlFail": "Selfie images get failed!",
-  "allGirlFail": "Update images get failed!",
-  "landGirlFail": "Street images get failed!",
-  "imageSetFail": "Image set get failed!",
+  "gankFail": "Gank images load failed!",
+  "eggFail": "Egg images load failed!",
+  "mostHotFail": "Hot images load failed!",
+  "sexGirlFail": "Sexy images load failed!！",
+  "japanGirlFail": "Japanese images load failed!",
+  "taiwanGirFail": "Taiwan images load failed!",
+  "beachGirlFail": "Beach images load failed!",
+  "selfGirlFail": "Selfie images load failed!",
+  "allGirlFail": "Update images load failed!",
+  "landGirlFail": "Street images load failed!",
+  "imageSetFail": "Image set load failed!",
   "imgSave": "Save",
   "imgSaveSuccess": "Image save succeed",
   "imgSaveFail": "Image save failed!",
   "setAsWallpaper": "Wallpaper",
   "canNotSetWallpaper": "Can't set wallpaper, please check network!",
   "__5": "_____________________________________闲读_____________________________________",
-  "xiandu": "Technology",
-  "xianduApps": "Apps",
-  "xianduImrich": "Imrich",
-  "xianduFunny": "Funny",
-  "xianduAndroid": "Android",
-  "xianduDie": "创业新闻",
-  "xianduThink": "独立思想",
-  "xianduIos": "iOS",
-  "xianduBlog": "团队博客",
-  "xianduFail": "科技资讯获取失败！",
-  "xianduAppsFail": "趣味软件/游戏获取失败！",
-  "xianduImrichFail": "装备党获取失败！",
-  "xianduFunnyFail": "草根新闻获取失败！",
-  "xianduAndroidFail": "Android获取失败！",
-  "xianduDieFail": "创业新闻获取失败！",
-  "xianduThinkFail": "独立思想获取失败！",
-  "xianduIosFail": "iOS获取失败！",
-  "xianduBlogFail": "团队博客获取失败！",
+  "readLoadFail": "$value load failed!",
+  "readTitleFail": "Categories load failed!",
   "__6": "_____________________________________收藏_____________________________________",
   "giftPhotos": "福利(图集)",
   "listEmpty": "列表为空",
