--- a/res/values/strings_zh.arb
+++ b/res/values/strings_zh.arb
@@ -90,31 +90,15 @@
   "selfGirlFail": "妹子自拍获取失败！",
   "allGirlFail": "每日更新获取失败！",
   "landGirlFail": "街拍美女获取失败！",
-  "imageSetFail": "组图加载是失败！",
+  "imageSetFail": "组图加载失败！",
   "imgSave": "保存图片",
-  "imgSaveSuccess": "图片保存成功！",
+  "imgSaveSuccess": "图片保存成功",
   "imgSaveFail": "图片保存失败！",
   "setAsWallpaper": "设为壁纸",
   "canNotSetWallpaper": "无法设置壁纸，请检查网络！",
   "__5": "_____________________________________闲读_____________________________________",
-  "xiandu": "科技资讯",
-  "xianduApps": "趣味软件/游戏",
-  "xianduImrich": "装备党",
-  "xianduFunny": "草根新闻",
-  "xianduAndroid": "Android",
-  "xianduDie": "创业新闻",
-  "xianduThink": "独立思想",
-  "xianduIos": "iOS",
-  "xianduBlog": "团队博客",
-  "xianduFail": "科技资讯获取失败！",
-  "xianduAppsFail": "趣味软件/游戏获取失败！",
-  "xianduImrichFail": "装备党获取失败！",
-  "xianduFunnyFail": "草根新闻获取失败！",
-  "xianduAndroidFail": "Android获取失败！",
-  "xianduDieFail": "创业新闻获取失败！",
-  "xianduThinkFail": "独立思想获取失败！",
-  "xianduIosFail": "iOS获取失败！",
-  "xianduBlogFail": "团队博客获取失败！",
+  "readLoadFail": "$value\u200b获取失败!",
+  "readTitleFail": "闲读分类获取失败!",
   "__6": "_____________________________________收藏_____________________________________",
   "giftPhotos": "福利(图集)",
   "listEmpty": "列表为空",
@@ -147,7 +131,7 @@
   "newVersionReadyLong": "新版本的安装包已经在WIFI环境下载完成，是否立即安装？（该过程不消耗流量）",
   "apkSize": "APK大小：",
   "updateTime": "更新时间：",
-  "apkPleaseInstall": "APK下载成功！请安装",
+  "apkPleaseInstall": "APK下载成功，请安装",
   "apkFail": "APK下载失败！",
   "apkDownloading": "应用正在更新中！",
   "apkStartDownload": "安装包开始下载",
