--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -104,7 +104,7 @@
   "listEmpty": "列表为空",
   "__7": "_____________________________________设置_____________________________________",
   "moduleControl": "模块管理",
-  "caculating": "正在计算...",
+  "calculating": "正在计算...",
   "shareType": "分享形式",
   "likeHammer": "仿锤子便签",
   "textOnly": "纯文本",
