新增干货分类

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -22,6 +22,7 @@
   "read": "News",
   "collect": "Favorite",
   "setting": "Setting",
+  "ganHuo": "干货",
   "about": "About",
   "retryToExit": "Back again to exit app!",
   "__3": "_____________________________________天气_____________________________________",
@@ -99,6 +100,7 @@
   "__5": "_____________________________________闲读_____________________________________",
   "readLoadFail": "$value load failed!",
   "readTitleFail": "Categories load failed!",
+  "ganHuoTitleFail": "Categories load failed!",
   "__6": "_____________________________________收藏_____________________________________",
   "giftPhotos": "福利(图集)",
   "listEmpty": "列表为空",
