--- a/res/values/strings_zh.arb
+++ b/res/values/strings_zh.arb
@@ -22,6 +22,7 @@
   "read": "闲读",
   "collect": "收藏",
   "setting": "设置",
+  "ganHuo": "干货",
   "about": "关于",
   "retryToExit": "再按一次退出App！",
   "__3": "_____________________________________天气_____________________________________",
@@ -97,8 +98,9 @@
   "setAsWallpaper": "设为壁纸",
   "canNotSetWallpaper": "无法设置壁纸，请检查网络！",
   "__5": "_____________________________________闲读_____________________________________",
-  "readLoadFail": "$value\u200b获取失败!",
-  "readTitleFail": "闲读分类获取失败!",
+  "readLoadFail": "$value\u200b获取失败！",
+  "readTitleFail": "闲读分类获取失败！",
+  "ganHuoTitleFail": "干货分类获取失败！",
   "__6": "_____________________________________收藏_____________________________________",
   "giftPhotos": "福利(图集)",
   "listEmpty": "列表为空",
