模块显示修改后显示错误的bug修复

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -19,10 +19,11 @@
   "__2": "_____________________________________主页_____________________________________",
   "weather": "Weather",
   "gift": "Gift",
-  "read": "News",
+  "read": "Article",
+  "readOrGanHuo": "Article/GanHuo",
   "collect": "Favorite",
   "setting": "Setting",
-  "ganHuo": "干货",
+  "ganHuo": "GanHuo",
   "about": "About",
   "retryToExit": "Back again to exit app!",
   "__3": "_____________________________________天气_____________________________________",
