--- a/res/values/strings_zh.arb
+++ b/res/values/strings_zh.arb
@@ -20,6 +20,7 @@
   "weather": "天气",
   "gift": "福利",
   "read": "闲读",
+  "readOrGanHuo": "闲读/干货",
   "collect": "收藏",
   "setting": "设置",
   "ganHuo": "干货",
